test_programs/compile_failure/noirc_frontend_tests_impl_missing_associated_type/src/main.nr

    trait Foo {
        type Assoc;
    }

    impl Foo for () {}
    